# crude-garbanzo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
shaders/: glslsandbox109644
src/: Camera.cpp  Camera.hpp  DebugOverlay.cpp  DebugOverlay.hpp  Garbanzo.cpp  Platform.cpp  Platform.hpp  PlatformManager.cpp  PlatformManager.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  animator.cpp  animator.hpp  camera_graphics.cpp  camera_graphics.hpp  camera_update.cpp  camera_update.hpp  component.hpp  factory.cpp  factory.hpp  fireball_graphics.cpp  fireball_graphics.hpp  fireball_update.cpp  fireball_update.hpp  game_object.cpp  game_object.hpp  graphics.hpp  input_dispatcher.cpp  input_dispatcher.hpp  input_receiver.cpp  input_receiver.hpp  level_update.cpp  level_update.hpp  main.cpp  menu_graphics.cpp  menu_graphics.hpp  menu_update.cpp  menu_update.hpp  (+13 more)
